assets/css/style.css
/*-- Font Family --*/

@import url('https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap');
body {
    background-color: #D4C9EB;
    font-family: 'Raleway', sans-serif;
}

h2, h5 {
    color: #6E47BA;
}

nav {
    background-color: #fafafa;
    position: sticky;
    top: 0;
    z-index: 9999999999999999999999;
}

html {
    scroll-behavior: smooth;
}

p {
    font-size: 1.125rem;
    margin-top: 1.25rem;
}

a {
    text-decoration: none;
    color: black;
}

/*-- Navbar--*/

.navbar-brand {
    color: #6E47BA !important;
}

a.nav-link {
    margin-left: 0.9375rem;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #6E47BA;
}

button.navbar-toggler {
    width: 6.25rem;
}

/*-- Containers --*/

.containers {
    background-color: #fafafa;
    border-radius: 1.25rem;
    padding: 1.25rem 1.875rem 1.25rem 1.25rem;
    align-items: center;
    justify-content: center;
    margin-top: 1.875rem;
    width: 95%;
}

@media screen and (max-width: 992px) {
    .containers {
        padding: 1.875rem;
    }
}

/*-- Callout Container --*/

.callout-container {
    background: url("../images/lavender.jpeg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
}

.jumbotron {
    background-color: transparent;
}

/*-- Maps --*/

#map {
    height: 37.5rem;
    width: 100%;
}

@media screen and (max-width: 576px) {
    #map {
        height: 25rem;
        margin-top: 1.563rem;
    }
}

.style-maps {
    position: relative;
    justify-content: center;
    margin-right: 1.25rem;
    margin-left: 1.25rem;
}

@media screen and (max-width: 768px) {
    .style-maps {
        margin-right: 0rem;
        margin-left: 0rem;
    }
}

.style-select {
    position: absolute;
    top: 0.5rem;
    width: 20%;
    background-color: #D4C9EB;
    padding: 0.313rem;
    text-align: center;
}

@media screen and (max-width: 992px) {
    .style-select {
        top: -2.5rem;
        width: 67%;
    }
}

/*---- Recipes container ----*/

.recipe-container {
    position: relative;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.recipe-text {
    margin-top: 3.438rem;
}

@media screen and (max-width: 992px) {
    .recipe-text {
        margin-top: 0.938rem;
    }
}

/*-- Recipes buttons --*/

.recipeBtnContainer {
    margin: 2.813rem 3.125rem 0rem 0rem;
    
}

@media screen and (max-width: 992px) {
    .recipeBtnContainer {
        margin: 0;
    }
}


.recipeBtn {
    background-color: #E4DBF2;
    width: 9.375rem;
    margin: 0.125rem 0.0625rem;
    cursor:pointer;
    padding: 0.3125rem 0.875rem 0.3125rem;
    border-style: solid;
    border-width: 0.0625rem;
    border-color: #A790D6;
}

#topBtn {
    position: fixed;
    bottom: 1.25rem;
    right: 2.5rem;
    z-index: 99;
    border: none;
    outline: none;
    color: #fff;
    background-color: #B2C9AA;
    cursor: pointer;
    padding: 0.625rem;
    border-radius: 0.625rem;
    font-size: 0.938rem;
    width: 6.563rem;
}

@media screen and (max-width: 320px) {
    #topBtn {
        right: 0.5rem;
        padding: 0.313rem;
        font-size:  0.8125rem;
        width: 5.688rem;
    }    
}

#topBtn:hover {
    background-color: #7AA16B;
}

/*-- Recipes Instructions --*/

#recipeInst-text {
    font-size: 1.125rem;
    position: absolute;
    top: 53%;
    left: 50%;
    margin-right: -15%;
    transform: translate(-50%, -50%)
}

.recipeInst-container {
    background-color: #f2eef9;
    height: 20rem;
    margin-top: 7.5rem;
    margin-left: 4.375rem;
    border-radius: 4%;
    border-style: solid;
    border-width: 0.125rem;
    border-color: #A790D6;
}

@media screen and (max-width: 992px) {
    .recipeInst-container {
        margin-left: 0rem;
        width: 12.5rem !important;
        margin-top: 4.375rem;
    }
}

/*-- Recipes pie chart --*/

svg {
    max-height: 18.75rem;
    margin: 0 auto;
    /* poor attempt at centering */
    height: auto !important;
    /* overrides inline */
    width: 18.75rem !important;
    /* overrides inline */
    display: block;
}

@media screen and (max-width: 320px) {
    svg {
        margin: 0rem -1.5rem;
    }
}

#recipe-graph {
    margin-top: 2.5rem;
}

/*-- Pie Chart/ Aromatic profile Legend --*/

.aromaticProf-text {
    display: inline;
    font-size: 0.938rem;
}

.legend-container {
    padding: 0.938rem 0;
}

.legend-text {
    align-items: center;
    vertical-align: middle;
    justify-content: center;
    width: 2.813rem;
    height: 1.563rem;
    padding: 0.75rem 0;
    margin: 0.438rem;
    border-radius: 10%;
    font-size: 1.25rem;
    line-height: 0.438rem;
}

/*-- Aromatic profile legend colors --*/

.woody {
    background: #66c2a5;
}

.floral {
    background: #fd8d62;
}

.resinous {
    background: #8ea0cc;
}

.citrus {
    background: #a7d955;
}

@media (max-width: 415px) and (min-width: 375px) {
    .legend li {
        margin: 0.313rem 1.188rem;
    }
}

/*-- Mouse --*/
/*-- Code from: https://codemyui.com/scroll-icon-animation/ --*/

.scroll-down, .scroll-down:before {
    position: absolute;
    left: 50%;
}

.scroll-down {
    width: 2.5rem;
    height: 4.375rem;
    margin-left: -1.25rem;
    margin-top: -2.188rem;
    box-shadow: inset 0 0 0 0.125rem black;
    border-radius: 1.563rem;
    bottom: 0.625rem;
}

@media screen and (max-width: 320px) {
    .scroll-down {
        bottom: -2.813rem;
    }
}

.scroll-down:before {
    content: '';
    width: 0.625rem;
    height: 0.625rem;
    background: black;
    margin-left: -0.313rem;
    top: 0.625rem;
    border-radius: 0.313rem;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
    animation-name: scroll;
}

@keyframes scroll {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        transform: translateY(2.875rem);
    }
}

/*-- Footer --*/

footer {
    min-height: 9.375rem;
    text-align: center;
    background-color: #A790D6;
    padding: 0.313rem 0rem 0.313rem 0rem;
}

#footer-details {
    margin: 1.563rem;
}

.social-links {
    padding: 0.938rem 0;
}

.social-links li a i {
    display: flex;
    align-items: center;
    position: relative;
    justify-content: center;
    width: 2.813rem;
    height: 2.813rem;
    padding: 0.75rem 0;
    border-radius: 50%;
    font-size: 1.25rem;
    line-height: 0.438rem;
    background: #f2eef9;
    color: #6E47BA;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.social-links li a i:hover {
    background: #D5E4B6;
}

a:link {
    text-decoration: none;
}

.slice text {
    font-size: 16pt;
    font-family: Arial;
}

